assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto&display=swap');

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;  
} 

*::before,
*::after{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

svg {
vertical-align: baseline;
border: none;
}


html {
    scroll-behavior: smooth;
}

body {
    font-family: 'Poppins', 'Roboto', sans-serif;    
}

/*-- Background colour Main Sections --*/

.navbar-colors {
    background: rgba(29,161,250) !important;       
}

#our-services {
    background-color: #ecf0f3;
}

#about-me {  
    background-color: rgba(29,161,250);
}

#clinic {
    background-color: #ecf0f3;
}

#map {
    background-color: #1da1fa;
}

footer {
    background: #333333;
}

/*-- Alert Top --*/

.site-wide-alert {
    margin-bottom: 0;
    text-align: center;
}

/*-- Navbar --*/

.navbar-colors a {
    color: #fff;
}

.brand-name {
    font-weight: 500;
    font-size: 1.8em;
    letter-spacing: 2px;
    padding-left: 0.75em;
    text-transform: uppercase;
}

.nav-button {
    margin: 0 0.75em;
}

#call-us {
    text-decoration: none;
    text-transform: uppercase;
}

#call-us:hover {
    color: rgba(29,161,250);
}

.nav-link:hover {
    color: white !important;
}

/*-- Hero Section --*/

/*-- Credit photo is from istockphoto by piprod --*/
.hero-img {
    background: url('../image/landing-photo.jpg') no-repeat bottom center;
    background-size: cover;
    height: 85vh;
    overflow: hidden;
}

.welcome-msg {
    width: 80%;
    margin-top: 20vh;
    margin-left: 3em;  
}

.msg-button {
    background-color: rgba(29,161,250);
    color: black;
}

.welcome-msg h1 {
    font-family: 'Roboto', 'Poppins', sans-serif;
    font-weight: 700;
    font-size: 3.5em;
    text-shadow: 1px 1px 1px rgb(70, 68, 68);
}

.welcome-msg h3 {
    font-weight: 300;
    margin-bottom: 20px;
}

/*-- Services --*/

#our-services {
    padding-top: 3em;
    padding-bottom: 1.5em;
}

#our-services h2 {
    font-weight: 500;
    font-size: 2.5em;
    text-align: center;
    padding-bottom: 1em;
    color: rgba(29,161,250);
}

#our-services h4 {
    font-weight: 500;
}

.card {
    text-align: center;
    border-radius: 25px;
    background: #ecf0f3;
    box-shadow: 13px 13px 20px #cbced1,
                -13px -13px 20px #ffffff;
}

.card img {
    width: 80%;
    margin: 0 auto; 
    border-radius: 20px; 
    margin-top: 15px;
    box-shadow: -13px -13px 20px #ffffff,
                4px 4px 8px #40566d;
                
}
 
/*-- About & Patient --*/

.wave {
    background-color: rgba(29,161,250);
    border: none;
}

#about-me h2 {
    font-weight: 500;
    font-size: 2.5em;
    text-align: center;
    padding-top: 2em;
    padding-bottom: 3em;
    color: white;
}


.front-box {
    border: 1px solid;
    padding: 10px;
    margin: 0 auto;
    position: relative;
    padding-top: 100px;
    background-color: #fff;
    border-radius: 25px;
}

.front-box h3 {
    padding-bottom: 1em;
    padding-left: 2em;  
}

.front-box p {
    text-align: center;
    padding: 0 0.75em;
}

#about-me img {
    height: 200px;
    width: 200px;
    border-radius: 50%;
    position: absolute;
    top: -80px;
    right: -10px;
}

.patient-card {
    margin: 0 auto;
    border: 1px solid;
    text-align: center;
    background-color: #fff;
    border-radius: 25px;
 
}

.patient-card h3 {
    margin-top: 1.5em;
    margin-bottom: 0.5em;
}

.patient-card p {
    padding: 0 1em;
}

#msg-button {
    margin-top: 0.75em;
    margin-bottom: 2em;
}


/*-- Clinic --*/

.wave-2 {
    background-color: #ecf0f3;
    border: none;
}

#clinic {
    text-align: center;
    padding-bottom: 5em;
}

#clinic h2 {
    padding: 0.5em 0;
    font-weight: 500;
    font-size: 2.5em;
    color: rgba(29,161,250);
}

#clinic h4 {
    padding-bottom: 1.2em;
}

/*-- Contact Info --*/

#contact {
    margin-top: 1.2em;
    margin-bottom: 3em;  
}

#contact h2 {
    padding: 0.5em 0;
    font-weight: 500;
    font-size: 2.5em;
    color: rgba(29,161,250);
    padding-bottom: 1em;
}

.form-card {
    background-color: #1da1fa;
    border: solid 1px black;
    border-radius: 25px;
    padding: 1.2em;
    margin: 0 auto;
}

.form-card button{
    background-color: #fff;
    color: black;
    border: solid 1px black;
}

.form-card input {
    color: black;
    border: solid 1px black;
}

.form-card textarea {
    color: black;
    border: solid 1px black;
}

.form-card select {
    color: black;
    border: solid 1px black;
}

.times-info {
    margin: 0 auto;
    padding-top: 8em;
    line-height: 2em;
}

.telephone-info {
    margin-top: 3em;
}

.phonebtn {
   font-size: 50px;
   color: #1da1fa;
}

/*-- Address & Map --*/

#map {
    padding-bottom: 8em;
}

#map h2 {
    font-weight: 500;
    font-size: 2.5em;
    text-align: center;
    padding-top: 1em;
    padding-bottom: 1em;
    color: white;
}

.address-info {
    padding-top: 9em;
    line-height: 2em;
}

.address-info h4 {
    color: white;
}

.address-info h5 {
    line-height: 2em;
    color: white;
}

.fa-map-marker-alt {
    color: black;
}

.fas-big {
    font-size: 40px;
}

.map-width {
    width: 100%;
}

.google-map {
    width: 100%;
    height: 500px;
    border: none;
    scroll-behavior: smooth;
}

/*-- Footer --*/

footer {
    background: #333333;
}

footer h2 {
    color: #1da1fa;
    padding-bottom: 0.5em;
}

footer p {
    color: white;
}

.gap {
    line-height: 2em;
    padding-left: 1em;
}

.box-space {
    margin-top: 2em;
    margin-bottom: 2em;
}

.fas-footer {
    font-size: 30px;
    color: #1da1fa;
    margin-right: 0.5em;
}

.social-links {
    list-style-type: none;
    padding-left: 0;
    padding-top: 20px;
    text-align: center;
    letter-spacing: 20px;
    color: #fff;
}

.list-item {
    display: inline-block; 
    font-size: 30px;
}

.list-item a {
    color: #fff;
}

/*-- Model --*/

#check-center {
    padding-left: 10px;
}

/*-- social media links --*/
/*-- Credit to CodingNepal (youtube) social media buttons. --*/

.link-buffer {
    margin-top: 1em;
}

.social-media-links {
    display: grid;
    height: 100%;
    width: 100%;
    place-items: center;   
}

.wrapper .button {
    display: inline-block;
    height: 60px;
    width: 60px;
    margin: 0 5px;
    overflow: hidden;
    background: #fff;
    border-radius: 50px;
    cursor: pointer;
    box-shadow: 0px 10px 10px rgba(0,0,0,0.1);
    transition: all 0.3s ease-out;
    -moz-transition: all 0.3s ease-in-out;
    -webkit-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    
}


.wrapper .button:hover {
    width: 200px;
}

.wrapper .button .icon {
    display: inline-block;
    height: 60px;
    width: 60px;
    text-align: center;
    border-radius: 50px;
    box-sizing: border-box;
    line-height: 60px;
    transition: all 0.3s ease-out;
    -moz-transition: all 0.3s ease-in-out;
    -webkit-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
}

.wrapper .button a {
    font-size: 20px;
    font-weight: 500;
    line-height: 60px;
    margin-left: 10px;
    text-decoration: none;
}

.wrapper .button:nth-child(1) a{
    color: #4267b2;
}

.wrapper .button:nth-child(2) a{
    color: #1da1fa;
}

.wrapper .button:nth-child(3) a{
    color: #d1306c;
}

.wrapper .button:nth-child(4) a{
    color: #ff0000;
}

/*------------------------------------------------- media screen -------------------------*/

@media screen and (max-width: 1200px) {
    #about-me img {
        height: 150px;
        width: 150px;
        border-radius: 50%;
        position: absolute;
        top: -80px;
        right: -10px;   
    }
}

@media screen and (max-width: 991px) {

    #about-me img {
        top: -60px;    
    }

    .front-box {
        margin-bottom: 3em;
    }

    .address-info {
    padding-top: 2em;
    margin-bottom: 1.5em;
    line-height: 2em;
    }
}


@media screen and (max-width: 590px) {

    .welcome-msg {
        width: 80%;
        text-align: center;
        margin-top: 15vh;
        background-color: rgba(215, 238, 238, 0.5);
        padding: 2em;
        margin-left: auto;
        margin-right: auto;
        border-radius: 20px;
    }

    .welcome-msg h1 {
        font-size: 2.5rem;
    }

    #about-me img {
        top: -80px;
        left: 200px;
    }
}

 @media screen and (max-width: 471px) {

    .brand-name {
        font-size: 1.6em;
    }

    #about-me img {
        top: -80px;
        left: 120px;
    }

    .welcome-msg {
        width: 80%;
        text-align: center;
        margin-top: 15vh;
        background-color: rgba(215, 238, 238, 0.7);
        padding: 1.5em;
        margin-left: auto;
        margin-right: auto;
        border-radius: 20px;
    }

    #about-me h2 {
        padding-bottom: 1em;
    }

    .front-box {
        margin-left: 0;
        margin-top: 3em;   
    }

    .patient-card {
        margin-top: 40px;
    }

    .times-info {
        padding-top: 4em;
        line-height: 2em;
    }

    .gap {
        padding: 0em;

    }

    .line-center {
        text-align: center;
    }

    .box-space {
        margin-top: 1em;
    }
 }

@media screen and (max-width: 320px) {
    
    .brand-name {
        font-size: 1.2em;
    }

    .welcome-msg h1{
        font-size: 2em;
    }

    #about-me h2 {
        padding-left: 10px;
    }

    #about-me img {
        top: -80px;
        left: 90px;
    }

    .iphone5se {
        text-align: center;
        padding-right: 30px;
    }


 /*------------------------------------------------- Links -------------------------*/

    .wrapper .button {
        display: inline-block;
        height: 40px;
        width: 40px;   
    }

    .wrapper .button:hover {
        width: 40px;
    }

    .wrapper .button:nth-child(1):hover .icon {
        background: #4267b2;
    }

    .wrapper .button:nth-child(2):hover .icon {
        background: #1da1fa;
    }

    .wrapper .button:nth-child(3):hover .icon {
        background: #d1306c;
    }

    .wrapper .button:nth-child(4):focus-visible .icon {
        background: #ff0000;
    }

    .wrapper .button .icon {
        display: inline-block;
        height: 40px;
        width: 40px;
        line-height: 40px;   
    }

    .wrapper .button .icon i {
        line-height: 40px;
    }

    .wrapper .button a {
        line-height: 50px;
    }
}

